# axon

./: .gitignore  CMakeLists.txt  README.md  engine.pyd  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: codeql.yml
axon/: __init__.py  _base.py  _ops.py  _random.py  _utils.py  base.py  dtype.py  nn.py  ops.py  utils.py
axon.c/: base.c
axon.c/utils/: functionals.c
axon/csrc/: base.cpp  bindings.cpp  engine.cpp  engine.h
axon/helpers/: ops.py  shape.py  shapes.py  utils.py
axon/micro/: __init__.py  base.py  nn.py  tensor.py
axon/micro/csrc/: bindings.cpp  engine.cpp  engine.h
axon/new/: __init__.py  base.py
axon/new/helpers/: shapes.py
axon/utils/: _contigous.py  _random.py  shape.py
docs/: Usage.md  axon.md  axon_micro.md  usage.md
examples/: MLP.py  RNN.py  axon_init.ipynb  math_ops.ipynb  micro_mlp.py  micro_rnn.py  mlp.py  rnn.py
extra/: ops.py  utils.py
extra/helpers/: shape.py
micrograd.c/: Main.cpp  Module.cpp  Value.cpp  Value.h  micrograd.c  micrograd.cpp
new/: __init__.py
new/helpers/: utils.py
tests/: test_array.py  test_engine.py  test_micro.py
