[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axon-pypi"
version = "1.0.0"
description = "Multi-dimensional array creation & manipulation library like numpy written from scratch in Python along with a scalar level autograd engine written in C/C++ with Python wrapper"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "shivendra", email = "shivharsh44@gmail.com"}]
classifiers = [
    "Development Status :: 1 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Hobbyist/Enthusiasts",
    "Intended Audience :: Builders from Scratch",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Windows",
    "Operating System :: MacOS",
    "Operating System :: Linux/Unix",
    "License :: OSI Approved :: MIT License",
]